mongodb-yaml/mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  rules:
  - host: mongodb.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-service
            port:
              number: 27017
